--- a/drupal/config/default/block.block.mainnavigation.yml
+++ b/drupal/config/default/block.block.mainnavigation.yml
@@ -10,8 +10,8 @@ dependencies:
     - frontend
 id: mainnavigation
 theme: frontend
-region: header
-weight: -3
+region: navigation
+weight: -5
 provider: null
 plugin: 'system_menu_block:main'
 settings:
@@ -20,6 +20,6 @@ settings:
   provider: system
   label_display: '0'
   level: 1
-  depth: 0
-  expand_all_items: false
+  depth: 2
+  expand_all_items: true
 visibility: {  }
