--- a/.docksal/docksal.env
+++ b/.docksal/docksal.env
@@ -11,8 +11,8 @@ DOCKSAL_STACK=default
 # Lock images versions for LAMP services
 # This will prevent images from being updated when Docksal is updated
 #WEB_IMAGE='docksal/web:x.x-apache2.4'
-#DB_IMAGE='docksal/db:x.x-mysql-5.6'
-#CLI_IMAGE='docksal/cli:x.x-php7.1'
+DB_IMAGE='docksal/db:1.1-mysql-5.7'
+CLI_IMAGE='docksal/cli:2.11-php7.4'
 
 # Override virtual host (matches project folder name by default)
 # VIRTUAL_HOST=drupal.docksal
